# VirgiliumEditor

./: AUTHORS  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README-it.md  README.md  cmake_install.cmake  qrc_Icons.cpp
client/: CMakeLists.txt  README.md  constants.h  exceptions.cpp  exceptions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  server_virgilium.cpp  server_virgilium.h  symbol.cpp  symbol.h  ui_mainwindow.h  virgilium_client.cpp  virgilium_client.h
client/Resources/: Icons.qrc
server/: CMakeLists.txt  constants.h  main.cpp  message.cpp  message.h  symbol.cpp  symbol.h  virgilium_client.cpp  virgilium_client.h  virgilium_server.cpp  virgilium_server.h
src/: clientMain.cpp  serverMain.cpp
src/build-client-Desktop-Debug/: Makefile  moc_ClientSocket.cpp  moc_PersonalPage.cpp  moc_WelcomePage.cpp  moc_changepassworddialog.cpp  moc_clientstuff.cpp  moc_deletefile.cpp  moc_managecollaborators.cpp  moc_renamefile.cpp  moc_renameordelete.cpp  moc_unsubscribefile.cpp  qrc_resources.cpp  ui_PersonalPage.h  ui_WelcomePage.h  ui_changepassworddialog.h  ui_deletefile.h  ui_managecollaborators.h  ui_renamefile.h  ui_renameordelete.h  ui_unsubscribefile.h
src/client/: client.pro  clientstuff.cpp  clientstuff.h  server_virgilium.cpp  server_virgilium.h  virgilium_client.cpp  virgilium_client.h
src/client/Resources/: Icons.qrc  Icons.qrc.depends
src/client/view/: PersonalPage.cpp  PersonalPage.h  PersonalPage.ui  TextEditor.cpp  TextEditor.h  TextEditor.ui  WelcomePage.cpp  WelcomePage.h  WelcomePage.ui  changepassworddialog.cpp  changepassworddialog.h  changepassworddialog.ui  deletefile.cpp  deletefile.h  deletefile.ui  managecollaborators.cpp  managecollaborators.h  managecollaborators.ui  renamefile.cpp  renamefile.h  renamefile.ui  renameordelete.cpp  renameordelete.h  renameordelete.ui  unsubscribefile.cpp  unsubscribefile.h  unsubscribefile.ui
src/common/: ClientSocket.cpp  ClientSocket.h  User.cpp  User.h  constants.h
src/common/CRDT/: Crdt_editor.cpp  Crdt_editor.h  Symbol.cpp  Symbol.h
src/common/messages/: ActiveUserMessage.cpp  ActiveUserMessage.h  BasicMessage.cpp  BasicMessage.h  ChangePasswordMessage.cpp  ChangePasswordMessage.h  CrdtMessage.cpp  CrdtMessage.h  FileManagementMessage.cpp  FileManagementMessage.h  FilesMessage.cpp  FilesMessage.h  InvitationMessage.cpp  InvitationMessage.h  StorageMessage.cpp  StorageMessage.h  UserManagementMessage.cpp  UserManagementMessage.h  UserMessage.cpp  UserMessage.h
src/server/: Server.cpp  Server.h
src/server/model/: Database.cpp  Database.h  Model.cpp  Model.h  SaveFileService.cpp  SaveFileService.h  ServerDocument.cpp  ServerDocument.h
